--- a/glide.yaml
+++ b/glide.yaml
@@ -2,6 +2,8 @@ package: github.com/limetext/lime-html
 import:
   - package: github.com/limetext/lime-backend
     ref:     2c5030159bc2d5743904274e45c3cd0563dcc184
+  - package: github.com/limetext/gopy
+    ref:     953f768831d5f6389aacdc9c016ff2fb8c2ca579
   - package: github.com/limetext/log4go
     ref:     2aba105a605a9ebe476f35d7610704e4e723d4ab
   - package: github.com/limetext/text
