--- a/glide.yaml
+++ b/glide.yaml
@@ -6,6 +6,8 @@ import:
     ref:     953f768831d5f6389aacdc9c016ff2fb8c2ca579
   - package: github.com/limetext/log4go
     ref:     2aba105a605a9ebe476f35d7610704e4e723d4ab
+  - package: github.com/limetext/rubex
+    ref:     3fc130e580797e3d9c6fdab36e6a961141f9fd5f
   - package: github.com/limetext/text
     ref:     d6b8f8c60fe38232a5b59388bbba0f3802c182e9
   - package: golang.org/x/net
