--- a/glide.yaml
+++ b/glide.yaml
@@ -12,5 +12,5 @@ import:
   - flatten: true
     package: github.com/limetext/text
     ref:     d6b8f8c60fe38232a5b59388bbba0f3802c182e9
-  - package: golang.org/x/net
+  - package: golang.org/x/net/websockets
     ref:     03affa02f16950ea3188823456766ed60bfed9bb
