--- a/glide.yaml
+++ b/glide.yaml
@@ -1,16 +1,22 @@
 package: github.com/limetext/lime-html
 import:
-  - package: github.com/limetext/lime-backend
-    ref:     2c5030159bc2d5743904274e45c3cd0563dcc184
-  - flatten: true
-    package: github.com/limetext/gopy
-    ref:     953f768831d5f6389aacdc9c016ff2fb8c2ca579
-  - package: github.com/limetext/log4go
-    ref:     2aba105a605a9ebe476f35d7610704e4e723d4ab
-  - package: github.com/limetext/rubex
-    ref:     3fc130e580797e3d9c6fdab36e6a961141f9fd5f
-  - flatten: true
-    package: github.com/limetext/text
-    ref:     d6b8f8c60fe38232a5b59388bbba0f3802c182e9
-  - package: golang.org/x/net/websockets
-    ref:     03affa02f16950ea3188823456766ed60bfed9bb
+- package: github.com/limetext/gopy
+  subpackages:
+  - lib
+- package: github.com/limetext/lime-backend
+  subpackages:
+  - lib
+  - lib/commands
+  - lib/keys
+  - lib/log
+  - lib/render
+  - lib/sublime
+  - lib/textmate
+  - lib/util
+- package: github.com/limetext/text
+- package: golang.org/x/net
+  subpackages:
+  - websocket
+excludeDirs:
+- tasks
+- packages
